# diff-review

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
diff_review/: cli.py  formatter.py  github.py  graph.py  nodes.py  schema.py
examples/: sample.diff
