[project]
name = "diff-review"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "langgraph>=0.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
diff-review = "diff_review.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
